log/build_2024-07-16_09-58-39/beginner_py/stdout_stderr.log
running egg_info
creating ../../build/beginner_py/beginner_py.egg-info
writing ../../build/beginner_py/beginner_py.egg-info/PKG-INFO
writing dependency_links to ../../build/beginner_py/beginner_py.egg-info/dependency_links.txt
writing entry points to ../../build/beginner_py/beginner_py.egg-info/entry_points.txt
writing requirements to ../../build/beginner_py/beginner_py.egg-info/requires.txt
writing top-level names to ../../build/beginner_py/beginner_py.egg-info/top_level.txt
writing manifest file '../../build/beginner_py/beginner_py.egg-info/SOURCES.txt'
reading manifest file '../../build/beginner_py/beginner_py.egg-info/SOURCES.txt'
writing manifest file '../../build/beginner_py/beginner_py.egg-info/SOURCES.txt'
running build
running build_py
creating /home/zzq/Desktop/ros2_ws/build/beginner_py/build
creating /home/zzq/Desktop/ros2_ws/build/beginner_py/build/lib
creating /home/zzq/Desktop/ros2_ws/build/beginner_py/build/lib/beginner_py
copying beginner_py/sub.py -> /home/zzq/Desktop/ros2_ws/build/beginner_py/build/lib/beginner_py
copying beginner_py/__init__.py -> /home/zzq/Desktop/ros2_ws/build/beginner_py/build/lib/beginner_py
running install
running install_lib
creating /home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py
copying /home/zzq/Desktop/ros2_ws/build/beginner_py/build/lib/beginner_py/sub.py -> /home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py
copying /home/zzq/Desktop/ros2_ws/build/beginner_py/build/lib/beginner_py/__init__.py -> /home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py
byte-compiling /home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py/sub.py to sub.cpython-310.pyc
  File "/home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py/sub.py", line 8
    """
       ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xb4 in position 1: invalid start byte

byte-compiling /home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py/__init__.py to __init__.cpython-310.pyc
running install_data
creating /home/zzq/Desktop/ros2_ws/install/beginner_py/share/ament_index
creating /home/zzq/Desktop/ros2_ws/install/beginner_py/share/ament_index/resource_index
creating /home/zzq/Desktop/ros2_ws/install/beginner_py/share/ament_index/resource_index/packages
copying resource/beginner_py -> /home/zzq/Desktop/ros2_ws/install/beginner_py/share/ament_index/resource_index/packages
copying package.xml -> /home/zzq/Desktop/ros2_ws/install/beginner_py/share/beginner_py
running install_egg_info
Copying ../../build/beginner_py/beginner_py.egg-info to /home/zzq/Desktop/ros2_ws/install/beginner_py/lib/python3.10/site-packages/beginner_py-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/zzq/Desktop/ros2_ws/build/beginner_py/install.log'
